css/jquery-glpi.css
.ui-widget-content a { color: #659900; }
.ui-widget-content span.vsubmit, a.vsubmit {color: #8f5a0a;}
/* css for timepicker */
.ui-datepicker {z-index:10000 !important; }
.ui-timepicker-div .ui-widget-header {margin-bottom: 8px; }
.ui-timepicker-div dl { text-align: left; }
.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
.ui-timepicker-div td { font-size: 90%; }
.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }

.ui-timepicker-rtl{ direction: rtl; }
.ui-timepicker-rtl dl { text-align: right; }
.ui-timepicker-rtl dl dd { margin: 0 65px 10px 10px; }


/* css styles for tabs */

.ui-tabs {
   width: 98%;
   margin: auto;
}

.ui-tabs-vertical {
   width: 98%;
   border: 0;
   vertical-align:top;
}
.ui-tabs-vertical .ui-tabs-nav {
   padding: .2em .1em .2em .2em;
   float: left;
   width: 170px;
   background: #cccccc;
}
.ui-tabs-vertical .ui-tabs-nav li {
   clear: left;
   width: 99%;
   border-bottom-width: 1px !important;
   border-right-width: 0 !important;
   margin: 0 -1px .1em -1px;
}
.ui-tabs-vertical .ui-tabs-nav li a {
   display: block;
   width: 128px;
   text-align: left;
}

.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active {
   padding-bottom: 0;
   padding-right: .1em;
   border-right-width: 1px;
}
.ui-tabs-vertical .ui-tabs-panel {
   padding: 1em;
   margin-left: 170px;
/*   position: relative;*/
   float: center;
   /*width: 40em;*/
}

/* css styles for progress bar */

.ui-progressbar .ui-progressbar-value { background-image: url('../pics/jquery/pbar-ani.gif'); }
.doaction_progress_text {
   float:left;
   color:black;
   text-align:center;
   width:100%;
   padding-top:3px;
   font-weight:bold;
}

.ui-autocomplete {
   max-height: 200px;
   font-size: 11px;
   overflow-y: auto;
   /* prevent horizontal scrollbar */
   overflow-x: hidden;
}

.ui-autocomplete a {
   color : black;
}

/* IE 6 doesn't support max-height
* we use height instead, but this forces the menu to always be this tall
*/
html .ui-autocomplete {
   height: 100px;
}

.loadingindicator {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
   border: 1px solid  #CC9900;
   background: url("../pics/fd_hoverlink.png") 0 0 repeat;
   max-width: 350px;
   margin : auto;
}

/* SELECT2 */

.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button
{
  font-family: 'Bitstream Vera Sans', arial, Tahoma, 'Sans serif';
  font-size: 11px;
}
.select2-results li {
   font-family: 'Bitstream Vera Sans', arial, Tahoma, 'Sans serif';
   font-size: 11px;
}
.select2-search input {
   font-family: 'Bitstream Vera Sans', arial, Tahoma, 'Sans serif';
   font-size: 11px;
}

.select2-container .select2-choice {
    height: 20px;
    padding: 0 0 0 8px;
    font-weight: normal;
    margin-top: 0px;
    vertical-align: top;
}
.select2-container .select2-choice span {
    margin-top: -2px;
    /* to have cut on left : not working reverse display for simple items*/
    /*direction: rtl;*/
}

.select2-container .select2-choice div b {
    margin-top: -2px;
}

.select2-results ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }
.select2-results ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub ul.select2-result-sub > li .select2-result-label { padding-left: 10px }

/* Menu actions*/
.select2-actionable-menu {
   width: 80%;
   margin:auto;
}

#BackToTop {
   float: left;
   display:none;
   color: #8f5a0a;
   margin: 0 5px;
   padding: 3px;
   text-decoration: none;
   border: 1px solid #831608;
   font: bold 12px Arial, Helvetica;
   position:fixed;
   bottom:10px;
   right:10px;
   z-index:9000;

   /** Background gradient **/
   background-color: #8f5a0a;
   background-image: -moz-linear-gradient(#fddb6f, #ffb94b);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#fddb6f), to(#ffb94b));
   background-image: -webkit-linear-gradient(#fddb6f, #ffb94b);
   background-image: -o-linear-gradient(#fddb6f, #ffb94b);
   background-image: -ms-linear-gradient(#fddb6f, #ffb94b);
   background-image: linear-gradient(#fddb6f, #ffb94b);

   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   text-shadow: 0 1px 0 rgba(255,255,255,0.5);
   -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
   -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 0 rgba(255, 255, 255, 0.3) inset;
   border-width: 1px;
   border-style: solid;
   border-color: #d69e31 #e3a037 #d5982d #e3a037
}

#BackToTop span
{
   display: block;
   cursor: pointer;

   /** Background gradient **/
   background-color: #8f5a0a;
   background-image: -moz-linear-gradient(#fddb6f, #ffb94b);
   background-image: -webkit-gradient(linear, left top, left bottom, from(#fddb6f), to(#ffb94b));
   background-image: -webkit-linear-gradient(#fddb6f, #ffb94b);
   background-image: -o-linear-gradient(#fddb6f, #ffb94b);
   background-image: -ms-linear-gradient(#fddb6f, #ffb94b);
   background-image: linear-gradient(#fddb6f, #ffb94b);
}

input.submit {
   font-size : 12px;
}

.uploadbar {
   height: 18px;
   text-align: center;
   font-weight:bold;
   background-image: url('../pics/jquery/pbar-ani.gif');
}

/* GANTT diagram */

.fn-gantt {
   text-align: left;
   font-size: 11px;
}

